Update dependencies and toolchain
Upgrade `rust-toolchain` to latest nightly build
Upgrade `rustfmt-nightly` to first rev with fix to AST structures
Upgrade `rand` to latest
Upgrade `cargo` and `cargo-util` to most recent commit
Upgrade `cargo_metadata` to latest
Upgrade `env_logger` to latest
Upgrade `clippy_lints` to most recent commit
Upgrade `itertools` to latest
Change Crate `disambiguator` from `Fingerprint(u64, u64)` to new `StableCrateId(u64)`
Fix error with new `working_dir` location under `opts` field
Add `regex` as dependency to `rls-rustc` due to change in newer `env_logger` causing error "can't find crate for `std`"
Update `clippy_lints::register_pre_expansion_lints` to provide session and conf as required now
Update `thread_rng` call to match new required from updated `rand` crate
Modify `load_file` to use `to_string()` on custom errors when making new io errors
Append `.into_std_path_buf()` when getting manifest parent as it returns `Utf8PathBuff` now
Update `client_dependency_typo_and_fix()` test to match new cargo output

--- a/rls-rustc/Cargo.toml
+++ b/rls-rustc/Cargo.toml
@@ -9,10 +9,13 @@ repository = "https://github.com/rust-lang/rls"
 categories = ["development-tools"]
 
 [dependencies]
-env_logger = "0.7"
+# Using Regex now to avoid error: can't find crate for `std`'; 
+# due to removal of 'std' from env_logger's regex dependency
+regex = "1"
+env_logger = "0.9"
 log = "0.4"
-rand = "0.7"
-clippy_lints = { git = "https://github.com/rust-lang/rust-clippy", rev = "a55912c48e4ac08c0ac39a2d562b44699fa20d4d", optional = true }
+rand = "0.8"
+clippy_lints = { git = "https://github.com/rust-lang/rust-clippy", rev = "8ad56c8fb72e38ff991d932da6a0acf91c0128ba", optional = true }
 tokio = { version = "1", optional = true }
 futures = { version = "0.3", optional = true }
 serde = { version = "1", features = ["derive"], optional = true }
